# evdevremapkeys

./: .gitignore  LICENSE  MANIFEST.in  README.md  RUNNING.md  build-binary.sh  build.sh  evdev-remapd.py  evdevremapkeys.py  hogs.yaml  pip-requirements.txt  pyproject.toml  requirements.txt  rudder.yaml  setup.cfg  setup.py  tox.ini
.github/workflows/: unittests.yml
evdevremapkeys/: evdevremapkeys.py
examples/: advanced_config.yaml  config.yaml  evdevremapkeys.service  long_press_config.yaml  verticalmouse.yaml
tests/: config.yaml  load_config_test.py
