[project]
name = "evdevremapkeys"
keywords = ["evdev", "uinput"]
description = "A daemon to remap key events on linux input devices"
readme = "README.md"
authors = [
    {name = "Philip Langdale", email = "philipl@overt.org"}
]
license = "MIT"

requires-python = '>=3.9'

dynamic = [
    "urls",
    "version",
]

dependencies = [
    "evdev >= 1.3.0",
    "pyudev >= 0.22.0",
    "pyxdg >= 0.26",
    "PyYAML >= 5.3",
]

[project.scripts]
evdevremapkeys = "evdevremapkeys.evdevremapkeys:main"


[dependency-groups]
dev = [
    "pytest >= 7.4.4",
    "pyinstaller >= 6.11.0",
    "staticx >= 0.9.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  ".git/",
  ".github/",
]

[tool.ruff.lint]
extend-select = ["E", "W", "F"]
