[project]
name = "evdevremapkeys"
keywords = ["evdev", "uinput"]
description = "A daemon to remap key events on linux input devices"
readme = "README.md"
authors = [
    {name = "Philip Langdale", email = "philipl@overt.org"}
]
license = "MIT"

requires-python = '>=3.9'

dynamic = [
    "urls",
    "version",
]

dependencies = [
    "evdev >= 1.3.0",
    "pyudev >= 0.22.0",
    "pyxdg >= 0.26",
    "PyYAML >= 5.3",
]

[project.scripts]
evdevremapkeys = "evdevremapkeys.evdevremapkeys:main"


[dependency-groups]
dev = [
    "pytest >= 7.4.4",
    "pyinstaller >= 6.11.0",
    "staticx >= 0.9.1",
    "types-pyyaml >= 6.0.12.20250516",
    "types-pyxdg >= 0.28.0.20250622",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://github.com/philipl/evdevremapkeys"

[tool.hatch.build.targets.sdist]
exclude = [
  ".git/",
  ".github/",
]

[tool.ruff.lint]
extend-select = ["E", "W", "F"]
