[metadata]
name = evdevremapkeys
version = 0.1
keywords = evdev uinput
description = A daemon to remap key events on linux input devices
long_description_content_type = text/markdown
author = Philip Langdale
author_email = philipl@overt.org
license = MIT
url = https://github.com/philipl/evdevremapkeys
python_requires='~=3.7'

[options]
packages = find:
include_package_data = true
install_requires =
    evdev >= 1.3.0
    pyudev >= 0.22.0
    pyxdg >= 0.26
    PyYAML >= 5.3

[options.extras_require]
binary =
    PyInstaller==4.2
    staticx>=0.9.1
test =
    flake8
    pytest
    tox

[options.entry_points]
console_scripts =
    evdevremapkeys = evdevremapkeys.evdevremapkeys:main


[flake8]
ignore = H301, W503, W504
max-line-length = 90
import-order-style = google
